[refactor] Config 비즈니스 로직 처리 분리 (#1037)
* refactor: RoomStreamEventConsumerConfig 제거

- Component를 활용한 주입 방식
- RedisStreamEventRegistrar Component 스캔할 수 있도록 수정

* refactor: ConsumerConfig -> Handler 변경

* refactor: sendQrCode 간략화

- 불필요한 LoggingSimpMessagingTemplate 전달 제거

* refactor: Bean 어노테이션 타입 Consumer 지원

* refactor: replace LoggerFactory with Lombok's @Slf4j for logging

* refactor: 모든 핵심 작업 성공 후 이벤트 발행

* refactor: Application 패키지 재정리

* fix: 트랜잭션 커밋 문제 해결

- 기존 setUp이 테스트 트랜잭션 내에만 존재하고 있으며, 비동기 실행 시 별도 트랜잭션으로 분리되어 조회되지 않는 문제가 발생 이를 즉시 커밋하여 해결

* refactor: Handler -> Consumer 이름 변경 및 EventService 생성

* refactor: handler -> consumer 이름 변경 및 EventService 추가

* refactor: 불변 리스트 활용

* refactor: RoomMessagePublisher 주석 제거

* refactor:RedisStreamEventRegistrar Consumer Bean 스캔 로직 개선

* refactor: 로깅 추가 및 RoomEventService 메서드 이름 개선

* refactor: kickPlayer 메서드 반환값 추가 및 RoomRestController에서 처리 개선

* refactor: BroadcastEvent 병합 및 개선

* refactor: 개선된 Consumer Bean 검사 로직 및 PlayerListUpdateEvent 주석 추가

* refactor: rename EventHandlerExecutor to EventDispatcher

* refactor: 에러 검증 개선

* refactor: improve player removal tests and exception handling

* refactor: improve exception handling in player removal tests

* refactor: 이벤트 타입 검사 간소화

* refactor: replace PlayerService with RoomCommandService in PlayerDisconnectionService

* test: PlayerDisconnectionServiceTest 테스트 실패 해결